package com.myriadcode.languagelearner.common.ids;

public record ContentId(String id) {
    }