@startuml

title Flashcard Reading Practice Domain Schema

class ReadingPracticeSession {
  +id : ReadingPracticeSessionId
  +userId : UserId
  +topic : String
  +createdAt : Instant
  +readingText : String
  +paragraphs : List<ReadingPracticeParagraph>
  +vocabularyUsages : List<ReadingVocabularyUsage>
}

class ReadingPracticeSessionId {
  +id : String
}

class ReadingVocabularyUsage {
  +id : ReadingVocabularyUsageId
  +flashCardId : FlashCardId
  +vocabularyId : VocabularyId
}

class ReadingPracticeParagraph {
  +id : ReadingPracticeParagraphId
  +text : String
  +position : int
  +sentences : List<ReadingPracticeSentence>
}

class ReadingPracticeParagraphId {
  +id : String
}

class ReadingPracticeSentence {
  +id : ReadingPracticeSentenceId
  +text : String
  +position : int
}

class ReadingPracticeSentenceId {
  +id : String
}

class ReadingVocabularyUsageId {
  +id : String
}

class FlashCardId {
  +id : String
}

class VocabularyId {
  +id : String
}

class UserId {
  +id : String
}

class ReadingPracticePolicy {
  +maxWords : int = 10
  +reviewCount : int = 4
  +reLearningCount : int = 3
  +learningCount : int = 2
  +newCount : int = 1
  +selectFlashcards(cards) : List<FlashCardReview>
}

class FlashCardReview {
  +id : FlashCardId
  +contentId : ContentId
  +fsrsState : State
}

class ContentId {
  +id : String
}

enum State {
  NEW
  LEARNING
  RE_LEARNING
  REVIEW
}

ReadingPracticeSession --> ReadingPracticeSessionId
ReadingPracticeSession --> UserId
ReadingPracticeSession *-- "0..*" ReadingPracticeParagraph : paragraphs
ReadingPracticeSession *-- "1..*" ReadingVocabularyUsage : vocabularyUsages
ReadingPracticeParagraph --> ReadingPracticeParagraphId
ReadingPracticeParagraph *-- "0..*" ReadingPracticeSentence : sentences
ReadingPracticeSentence --> ReadingPracticeSentenceId
ReadingVocabularyUsage --> ReadingVocabularyUsageId
ReadingVocabularyUsage --> FlashCardId
ReadingVocabularyUsage --> VocabularyId
FlashCardReview --> FlashCardId
FlashCardReview --> ContentId
FlashCardReview --> State

note right of ReadingPracticeSession
Aggregate root:
- owns reading text, paragraphs, and vocabulary usage references
- stores only IDs for flashcards/vocab
end note

note right of ReadingPracticeParagraph
Paragraph:
- stores original paragraph text
- owns ordered sentences
end note

note right of ReadingVocabularyUsage
Usage row binds:
- flashcard
- vocabulary
end note

note right of ReadingPracticePolicy
Selection policy:
- max 10 words
- 4 review, 3 re-learning, 2 learning, 1 new
- fallback fills missing counts
end note

note bottom of ReadingPracticeSession
Reading text is generated from selected
flashcard vocabulary and stored in session.
Paragraphs and sentences are generated
via LLM and stored separately.
end note

@enduml
